# pipelinewise-target-snowflake

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
target_snowflake/: db_sync.py  flattening.py
