
[project]
name = "pipelinewise-target-snowflake"
version = "2.2.8"
description = "Singer.io target for loading data to Snowflake - PipelineWise compatible"
readme = "README.md"
authors = [
    {name = "Wise"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "boto3==1.28.9",
    "inflection==0.5.1",
    "joblib==1.2.0",
    "numpy<2",
    "pipelinewise-singer-python>=1,<3",
    "snowflake-connector-python[pandas]==3.13.2",
    "certifi<=2025.1.31",
]

[project.urls]
Homepage = "https://github.com/transferwise/pipelinewise-target-snowflake"

[project.optional-dependencies]
test = [
    "pylint>=2.12,<2.18",
    "pytest-cov==3.0.0",
    "pytest==7.4.0",
    "python-dotenv>=0.19,<1.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
target-snowflake = "target_snowflake:main"
